<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">橙影</string>
    <string name="shot_mode_slow_lapse">Lapse</string>
    <string name="shot_mode_slow_motion">SlowMotion</string>
    <string name="shot_mode_video">Video</string>
    <string name="shot_mode_story">Story</string>
    <string name="shot_mode_photo">Photo</string>
    <string name="shot_mode_long_explore">LongExplore</string>
    <string name="edit">编辑</string>
    <string name="selecte_gallery_l">已选择 %1$d 项</string>
    <string name="getcode">获取验证码</string>
    <string name="code_not_null">请输入验证码</string>
    <string name="phone_not_null">请输入手机号</string>
    <string name="get_code_sucess">验证码获取成功</string>
    <string name="login_sucess">登录成功</string>
    <string name="login_go">登录</string>
    <string name="login_ing">登录中...</string>
    <string name="login_resend">重新发送%1$d秒</string>
    <string name="login_input_code">请输入验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_ready_yes">我已阅读并同意</string>
    <string name="login_ready_and">和</string>
    <string name="login_no_out">解禁流程不能退出</string>
    <string name="no_network">当前网络不可用，请检查网络设置</string>
    <string name="delete_dialog_content">您确定删除该项目吗？\n删除后将不能恢复。</string>
    <string name="sure">确定</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="minVideoFileTotalLength">所选视频要大于36秒</string>
    <string name="delete_tip">文件删除中，请勿退出。</string>
    <string name="current_delete_count">已经删除%d个项目</string>
    <string name="down_count">%d</string>
    <string name="down_tip">下载中，请勿退出。</string>
    <string name="camera_grallery">相机相册</string>
    <string name="select_camera_list_item">选择项目</string>
    <string name="plase_down_content">请选择要下载的内容</string>
    <string name="already_bottom">已经到底啦~</string>
    <string name="already_selecte_count">已选择 %d 项</string>
    <string name="user_agreement"> 《用户协议》 </string>
    <string name="privacy_policy"> 《隐私政策》 </string>
    <string name="like_success">喜欢成功</string>
    <string name="share_video">分享视频至</string>
    <string name="weixin">微信</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="to_contribute">去投稿</string>
    <string name="to_home">回首页</string>
    <string name="complete_sucess">视频生成成功，已保存至相册</string>
    <string name="complete_fail">视频生成失败</string>
    <string name="share_and_save">分享与保存</string>
    <string name="edit_title">视频描述，创作感想~</string>
    <string name="disconenct_usb">相机已断开</string>
    <string name="camera_gallery">相机相册</string>
    <string name="camera_gallery_filter">橙影素材</string>
    <string name="uploadhardware">橙影智能摄影机</string>
    <string name="upload_connet_content">请保持云台相机连接状态，切勿移除，以免造成升级失败，给您造成不必要的麻烦</string>
    <string name="zeroZZZ">00:00</string>
    <string name="originalSound">原声</string>
    <string name="music">音乐</string>
    <string name="generating">生成中…</string>
    <string name="cancel">取消</string>
    <string name="checkAll">全选</string>
    <string name="cancelCheckAll">取消全选</string>
    <string name="attentionForNotWifi">当前为非WiFi环境，请注意流量消耗</string>
    <string name="connectCamera">请连接相机</string>
    <string name="connectCameraSucc">相机已连接</string>
    <string name="netTempleteDownloadException">加载错误，请检查网络连接后重试</string>
    <string name="videoDownloadException">视频下载异常，请稍后再试</string>
    <string name="startCaptionVideo">还没有精彩片段</string>
    <string name="noEnoughWonderfulData">加载失败，精彩片段不足</string>
    <string name="grantStoragePermission">暂无权限，请到设置中开启文件读写权限</string>
    <string name="syncingCameraData">正在同步相机参数</string>
    <string name="loginCamera">请登录橙影帐号</string>
    <string name="downloadTimeout">网络连接异常，请重试</string>
    <string name="shareWonderfulMoment">分享精彩时刻</string>
    <string name="loadToBottom">已经到底啦~</string>
    <string name="wondelfulTime">精彩时刻</string>
    <string name="selectDate">选择日期，当天视频自动成片</string>
    <string name="tipForMakeVideo">建议删除重复、低质量视频，成片效果更佳</string>
    <string name="tipTodayVideo">4K60帧、横拍或者当天拍摄视频总时长不足36秒的不能一键成片</string>
    <string name="noWondelfulData">还没有精彩片段</string>
    <string name="loadingData">加载中</string>
    <string name="morangeProduct">橙影作品</string>
    <string name="makeVideo">下一步</string>
    <string name="noConnectWithCamera">未连接到橙影智能摄影机</string>
    <string name="makeSureCameraStart">确定相机已开启，并插入手机数据接口。</string>
    <string name="videoIsGenerating">视频正在生成中，请勿退出</string>
    <string name="use">使用</string>
    <string name="using">使用中</string>
    <string name="longVideo">长视频</string>
    <string name="shortVideo">短视频</string>
    <string name="deviceConnect">设备连接</string>
    <string name="makeConnecting">连接创建中</string>
    <string name="generate">生成</string>
    <string name="section">段</string>
    <string name="netConnectException">网络异常，请检查网络连接后重试</string>
    <string name="cannotCancelWhenDownload">视频下载中，请稍后</string>
    <string name="yearMonthDate">yyyy-MM-dd</string>
    <string name="today">今天</string>
    <string name="select_production_proportion">选择制作比例</string>
    <string name="sixteenTNine">16:9</string>
    <string name="nineTSixteen">9:16</string>
    <string name="fourTThree">4:3</string>
    <string name="threeTFour">3:4</string>
    <string name="oneTone">1:1</string>
    <string name="prompt">提示</string>
    <string name="stayTuned">敬请期待！</string>
    <string name="contactBusiness">可移步官网联系商务人员</string>
    <string name="i_know">知道了</string>
    <string name="int50">50</string>
    <string name="upload_monitor">升级环境检测中</string>
    <string name="clip_video">一键成片</string>
    <string name="camera">相机拍摄</string>
    <string name="douyin">抖音拍摄</string>
    <string name="drafts">草稿箱</string>
    <string name="my_album">我的相册</string>
    <string name="reddening">红润</string>
    <string name="strength">磨皮</string>
    <string name="sdcard_status_full">SD卡已满，请整理文件</string>
    <string name="sdcard_out">SD卡未插入</string>
    <string name="sdcard_err">SD卡错误或不支持</string>
    <string name="sdcard_abnormal">不识别此SD卡，请重试或格式化</string>
    <string name="sdcard_low">当前SD卡为低速卡，部分功能受限</string>
    <string name="dlg_loading">连接中 请稍后</string>
    <string name="dlg_disconnect">连接已断开，请检查设备</string>
    <string name="ptz_lock">与机体保持相对固定</string>
    <string name="ptz_follow">保持水平更灵活视角</string>
    <string name="ptz_ptz_lock">视角保持水平上方</string>
    <string name="dlg_follow_sens">适合画面快速切换场景</string>
    <string name="dlg_follow">适合画面平稳移动场景</string>
    <string name="err_ptz_rever">当前模式不支持翻转</string>
    <string name="err_ptz_center">当前模式不支持回中</string>
    <string name="err_ptz_astrict">云台到达限位</string>
    <string name="err_ptz_protect">云台保护，点击恢复</string>
    <string name="trace_unsupport">当前模式不支持跟踪</string>
    <string name="trace_unsupport_fpv">FPV模式不支持跟踪</string>
    <string name="trace_ptz_unsupport">跟踪中不支持切换云台模式</string>
    <string name="trace_err_8x">8X下不支持跟踪</string>
    <string name="trace_err_4k60fps">4k 60帧下不支持跟踪</string>
    <string name="trace_err_mode">当前模式不支持跟踪</string>
    <string name="trace_miss">跟踪目标丢失</string>
    <string name="zoom_err_mode">当前模式不支持变焦</string>
    <string name="second">秒</string>
    <string name="affirm">确认</string>
    <string name="hdr_hdr">HDR</string>
    <string name="param_setting">参数正在设置</string>
    <string name="sync_param_err">同步参数失败 请重新连接</string>
    <string name="err_temper_bat_hei">电池温度过高</string>
    <string name="err_temper_bat_hei_5">电池温度过高，5s后将自动关机</string>
    <string name="err_temper_bat_low_5">电池温度过低，5s后将自动关机</string>
    <string name="err_temper_camera_hei">镜头温度过高</string>
    <string name="err_temper_camera_hei_5">镜头温度过高，5s后将自动关机</string>
    <string name="err_temper_camera_low">镜头温度过低</string>
    <string name="bat_low_15">电池电量低于15%</string>
    <string name="bat_low_shutdown">相机即将关机</string>
    <string name="err_change_moding">模式切换中</string>
    <string name="err_mediacodec_create">视频预览错误请重试</string>
    <string name="change_mode_fail">切换模式失败</string>
    <string name="fpv_mode_longexplore">&#160;长曝光&#160;</string>
    <string name="fpv_mode_photo">&#160;&#160;照片&#160;&#160;</string>
    <string name="fpv_mode_video">&#160;&#160;视频&#160;&#160;</string>
    <string name="fpv_mode_slowmotion">&#160;慢动作&#160;</string>
    <string name="fpv_mode_lapse">延时摄影</string>
    <string name="fpv_mode_beauty">&#160;&#160;美颜&#160;&#160;</string>
    <string name="fpv_shot_mode_longexplore">&#160;长曝光&#160;</string>
    <string name="fpv_shot_mode_photo">&#160;&#160;照片&#160;&#160;</string>
    <string name="fpv_shot_mode_video">&#160;&#160;视频&#160;&#160;</string>
    <string name="fpv_shot_mode_slowmotion">&#160;慢动作&#160;</string>
    <string name="fpv_shot_mode_lapse">延时摄影</string>
    <string name="fpv_count_down_off">关闭</string>
    <string name="fpv_count_down_3s">3s</string>
    <string name="fpv_count_down_5s">5s</string>
    <string name="fpv_count_down_7s">7s</string>
    <string name="fpv_resolution_fps">帧率(FPS)</string>
    <string name="fpv_resolution_fen_bian_lv">分辨率</string>
    <string name="fpv_beauty_smooty">磨皮</string>
    <string name="fpv_beauty_light">增亮</string>
    <string name="fpv_beauty_unsupport">不支持1080P30FPS以上的分辨率</string>
    <string name="fpv_resolution_24">24</string>
    <string name="fpv_resolution_30">30</string>
    <string name="fpv_resolution_60">60</string>
    <string name="fpv_resolution_1080p">1080P</string>
    <string name="fpv_resolution_2k">2K</string>
    <string name="fpv_resolution_4k">4K</string>
    <string name="fpv_scale_hua_fu">视角</string>
    <string name="fpv_scale_normal">普通</string>
    <string name="fpv_scale_width">超宽</string>
    <string name="fpv_scale_bili">比例</string>
    <string name="fpv_lapse_chou_zhen">间隔</string>
    <string name="fpv_slowmotion_bei_lv">倍率</string>
    <string name="fpv_slowmotion_bei_lv_2x">2X</string>
    <string name="fpv_slowmotion_bei_lv_4x">4X</string>
    <string name="fpv_slowmotion_bei_lv_8x">8X</string>
    <string name="fpv_explore_name">曝光时长</string>
    <string name="fpv_set_format">格式</string>
    <string name="fpv_set_auto">自动</string>
    <string name="fpv_set_custom">自定义</string>
    <string name="fpv_setting_yuntai_all_lock">全Lock</string>
    <string name="fpv_setting_yuntai_fpv">FPV</string>
    <string name="fpv_setting_yuntai_lock_pitch_Roll">俯仰锁定</string>
    <string name="fpv_setting_yuntai_lock_Roll">云台跟随</string>
    <string name="fpv_setting_profrssional_name">专业模式</string>
    <string name="fpv_setting_auto">AUTO</string>
    <string name="fpv_setting_shutter">快门速度</string>
    <string name="fpv_setting_iso">感光度(ISO)</string>
    <string name="fpv_setting_ev">曝光值(EV)</string>
    <string name="fpv_setting_type_explore">曝光值</string>
    <string name="fpv_setting_type_awb">白平衡</string>
    <string name="fpv_setting_type_color">色彩</string>
    <string name="fpv_setting_type_track">跟踪</string>
    <string name="fpv_setting_type_dis">电子防抖</string>
    <string name="fpv_setting_type_wdr">宽动态</string>
    <string name="fpv_setting_type_super_high_quality">超高画质</string>
    <string name="fpv_setting_type_format">格式</string>
    <string name="fpv_setting_type_more">更多设置</string>
    <string name="fpv_setting_connect">请连接相机</string>
    <string name="fpv_setting_trace_set_err">设置跟踪模式失败</string>
    <string name="network_error">网络异常，请检查网络连接后稍后重试</string>
    <string name="network_error_reset">网络异常，请检查网络连接后稍后重试</string>
    <string name="reset">重试</string>
    <string name="dy_countdown">倒计时</string>
    <string name="welcome_app">欢迎使用橙影APP</string>
    <string name="privacy_title">请您充分阅读以下隐私保护信息。</string>
    <string name="dislog_content">
        1.我们会严格遵循隐私政策去收集和使用信息，但不会仅因同意该隐私政策而采取强制捆绑的方式收集信息；
        \n2.浏览、拍摄、编辑影音时，需要获取的麦克风、相册、摄像头权限都不会默认开启，只有经过明示授权才会实现功能或服务的使用，功能或服务不需要时不会通过您授权的权限收集信息。
        \n3.您可以访问、更正和删除个人信息，我们也将提供注销账号和投诉举报方式。</string>
    <string name="tongyi">同意</string>
    <string name="butongyi">不同意</string>
</resources>