<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_notwork"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:visibility="gone"
            android:text="@string/network_error"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#666666"
            android:textSize="13sp"
            android:text="@string/network_error_reset"/>


    </LinearLayout>
    <TextView
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center"
        android:background="@drawable/bt_login_bg_press"
        android:text="@string/reset"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</FrameLayout>

